src/test/ui/impl-trait/issue-55872.stderr
error: type parameter `T` is part of concrete type but not used in parameter list for the `impl Trait` type alias
  --> $DIR/issue-55872.rs:13:9
   |
LL |         || ()
   |         ^^^^^

error: aborting due to previous error

